tokenomics hero section

--- a/src/scss/style-tokenomics.1280.scss
+++ b/src/scss/style-tokenomics.1280.scss
@@ -1,4 +1,10 @@
-
 @import 'assets/colors';
 @import 'assets/mixins';
 @import 'assets/variables';
+@import '../sections/header/header.1280';
+@import '../sections/mobile-menu/mobile-menu.1280';
+@import '../sections/tokenomics-hero/tokenomics-hero.1280';
+@import '../sections/tokenomics-ctube/tokenomics-ctube.1280';
+@import '../sections/tokenomics-token-distribution-model/tokenomics-token-distribution-model.1280';
+@import '../sections/title-descr-link/title-descr-link.1280';
+@import '../sections/footer/footer.1280';
