--- a/src/scss/style-tokenomics.576.scss
+++ b/src/scss/style-tokenomics.576.scss
@@ -1,4 +1,10 @@
-
 @import 'assets/colors';
 @import 'assets/mixins';
 @import 'assets/variables';
+@import '../sections/header/header.576';
+@import '../sections/mobile-menu/mobile-menu.576';
+@import '../sections/tokenomics-hero/tokenomics-hero.576';
+@import '../sections/tokenomics-ctube/tokenomics-ctube.576';
+@import '../sections/tokenomics-token-distribution-model/tokenomics-token-distribution-model.576';
+@import '../sections/title-descr-link/title-descr-link.576';
+@import '../sections/footer/footer.576';
