--- a/src/scss/style-tokenomics.768.scss
+++ b/src/scss/style-tokenomics.768.scss
@@ -1,4 +1,10 @@
-
 @import 'assets/colors';
 @import 'assets/mixins';
 @import 'assets/variables';
+@import '../sections/header/header.768';
+@import '../sections/mobile-menu/mobile-menu.768';
+@import '../sections/tokenomics-hero/tokenomics-hero.768';
+@import '../sections/tokenomics-ctube/tokenomics-ctube.768';
+@import '../sections/tokenomics-token-distribution-model/tokenomics-token-distribution-model.768';
+@import '../sections/title-descr-link/title-descr-link.768';
+@import '../sections/footer/footer.768';
