--- a/src/sections/tokenomics-hero/tokenomics-hero.1280.scss
+++ b/src/sections/tokenomics-hero/tokenomics-hero.1280.scss
@@ -1,3 +1,26 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.tokenomics-hero {
+  padding-top: 125px;
+  padding-bottom: 80px;
+  background: url('../img/tokenomics-hero-bg.svg') center / cover no-repeat;
+
+  &__top-text {
+  }
+
+  &__title {
+    margin: 0 0 40px;
+    max-width: 860px;
+    font-size: 64px;
+  }
+
+  &__descr {
+  }
+
+  &__link {
+    width: 203px;
+    height: 61px;
+  }
+}
