--- a/src/sections/tokenomics-hero/tokenomics-hero.576.scss
+++ b/src/sections/tokenomics-hero/tokenomics-hero.576.scss
@@ -1,3 +1,18 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.tokenomics-hero {
+
+  &__top-text {
+  }
+
+  &__title {
+  }
+
+  &__descr {
+  }
+
+  &__link {
+  }
+}
