--- a/src/sections/tokenomics-hero/tokenomics-hero.scss
+++ b/src/sections/tokenomics-hero/tokenomics-hero.scss
@@ -1,3 +1,26 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.tokenomics-hero {
+  padding-top: 50px;
+  padding-bottom: 80px;
+
+  &__top-text {
+  }
+
+  &__title {
+    margin: 0 0 20px;
+    font: 600 28px/1.3 $mainFont;
+  }
+
+  &__descr {
+  }
+
+  &__link {
+    margin: 35px 0 0;
+    text-transform: uppercase;
+    width: 133px;
+    height: 55px;
+  }
+}
