--- a/src/sections/tokenomics-ctube/tokenomics-ctube.768.scss
+++ b/src/sections/tokenomics-ctube/tokenomics-ctube.768.scss
@@ -1,3 +1,27 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.tokenomics-ctube {
+
+  &__top-text {
+  }
+
+  &__title {
+  }
+
+  &__items {
+  }
+
+  &__item {
+  }
+
+  &__item-img {
+  }
+
+  &__item-title {
+  }
+
+  &__item-descr {
+  }
+}
