--- a/src/sections/tokenomics-token-distribution-model/tokenomics-token-distribution-model.576.scss
+++ b/src/sections/tokenomics-token-distribution-model/tokenomics-token-distribution-model.576.scss
@@ -1,3 +1,86 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+.tokenomics-distribution {
+
+  &__top-text {
+  }
+
+  &__title {
+  }
+
+  &__chart-block {
+  }
+
+  &__chart-wrap {
+  }
+
+  &__chart {
+  }
+
+  &__chart-tooltip {
+  }
+}
+.distribution-chart {
+
+  &__data {
+  }
+
+  &__data-title {
+  }
+
+  &__data-item {
+  }
+
+  &__data-item-color {
+  }
+
+  &__data-item-title {
+  }
+
+  &__data-item-descr {
+  }
+}
+.tokenomics-supply {
+
+  &__block {
+  }
+
+  &__number {
+  }
+
+  &__text {
+  }
+}
+.tokenomics-table-block {
+
+  &__text {
+  }
+
+  &__title {
+  }
+
+  &__descr {
+  }
+
+  &__table {
+  }
+}
+.tokenomics-table {
+
+  &__hdr {
+  }
+
+  &__tr {
+  }
+
+  &__th {
+  }
+
+  &__body {
+  }
+
+  &__td {
+  }
+}
