--- a/src/scss/assets/_colors.scss
+++ b/src/scss/assets/_colors.scss
@@ -6,3 +6,4 @@ $text_gradient: linear-gradient(265deg, #12C2E9 -5%, #C471ED 70%, #F64F59 127%);
 $grey: #2a2d2e;
 $grey2: #252324;
 $grey3: #5A5859;
+$error: #C01313;
