--- a/src/scss/style/forms/forms.scss
+++ b/src/scss/style/forms/forms.scss
@@ -4,12 +4,12 @@
 @import '../../assets/variables';
 
 // Error message
-label.invalid {
+p.invalid {
   position: absolute;
   left: 0;
-  bottom: -20px;
+  bottom: 15px;
   font: normal 0.75em/1.4 sans-serif;
-  // color: $error;
+  color: $error;
 }
 
 .check {
@@ -24,7 +24,7 @@ label.invalid {
     &:checked {
       + .check-tick__pseudo-inp {
         background: $gradient;
-        border-color: transparent;
+        border-color: $black;
         &::before {
           opacity: 1;
         }
@@ -54,7 +54,7 @@ label.invalid {
     }
   }
 
-  > label.invalid {
+  > p.invalid {
     margin: 5px 0 0;
     max-width: 75%;
     grid-row: 2;
