--- a/src/sections/research-and-development-more-applications/research-and-development-more-applications.scss
+++ b/src/sections/research-and-development-more-applications/research-and-development-more-applications.scss
@@ -35,6 +35,7 @@
     font: 600 16px/1.5 $mainFont;
     text-transform: uppercase;
     cursor: pointer;
+    @include gradient-text('hover');
   }
 
   &__item-arrow {
