--- a/src/scss/assets/_mixins.scss
+++ b/src/scss/assets/_mixins.scss
@@ -38,15 +38,27 @@
   @return calc(#{$start}(100vw - #{$minScreenWidth}px)/(#{$maxScreenWidth} - #{$minScreenWidth})*(#{$maxPxs} - #{$minPxs}) + #{$minPxs}px#{$end});
 }
 
+@mixin gradient-text($hover) {
+  background: $text_gradient;
+  background-clip: text;
+  -webkit-background-clip: text;
+  transition: color .5s;
+  @if $hover == 'hover' {
+    &:hover {
+      color: transparent;
+    }
+  }
+}
+
 @mixin gradient-border($width) {
   &::before {
     content:"";
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     padding: $width;
     position: absolute;
-    top: 0;
-    left: 0;
     border-radius: inherit;
     background: $gradient;
     -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
