--- a/src/sections/index-about/index-about.1280.scss
+++ b/src/sections/index-about/index-about.1280.scss
@@ -2,6 +2,68 @@
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
 
+$animationPercentStep: 100 / 18;
+
+@keyframes indexPropertiesBallAnim {
+  0% {
+    transform: translate(151px, 135px);
+  }
+  5.55% {
+    transform: translate(151px, -25px);
+  }
+  11.1% {
+    transform: translate(290px, -102px);
+  }
+  16.65% {
+    transform: translate(430px, -25px);
+  }
+  22.2% {
+    transform: translate(430px, 137px);
+  }
+  27.75% {
+    transform: translate(570px, 214px);
+  }
+  33.3% {
+    transform: translate(710px, 137px);
+  }
+  38.5% {
+    transform: translate(710px, -25px);
+  }
+  44.4% {
+    transform: translate(850px, -102px);
+  }
+  49.95% {
+    transform: translate(989px, -25px);
+  }
+  55.5% {
+    transform: translate(989px, 137px);
+  }
+  61.05% {
+    transform: translate(850px, 214px);
+  }
+  66.6% {
+    transform: translate(710px, 137px);
+  }
+  72.15% {
+    transform: translate(710px, -25px);
+  }
+  77.7% {
+    transform: translate(570px, -102px);
+  }
+  83.25% {
+    transform: translate(430px, -25px);
+  }
+  88.8% {
+    transform: translate(430px, 137px);
+  }
+  94.35% {
+    transform: translate(290px, 214px);
+  }
+  100% {
+    transform: translate(151px, 135px);
+  }
+}
+
 .index-about {
   background-position: center;
   &.lazyloaded,
@@ -17,6 +79,9 @@
   &__properties {
     margin: 150px 0 258px;
     flex-flow: row;
+    &::after {
+      transform: translate(151px, 135px);
+    }
   }
 
   &__property {
@@ -29,6 +94,9 @@
     
     &:first-child {
       margin: 0 0 0 187px;
+      @media (hover) {
+        margin: 0 0 0 180px;
+      }
     }
     &:nth-child(2) {
       margin: 12px 0 0 55px;
