--- a/src/sections/index-about/index-about.scss
+++ b/src/sections/index-about/index-about.scss
@@ -2,6 +2,69 @@
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
 
+@keyframes indexPropertiesBallAnim {
+  0% {
+    transform: translate(68px, -61px);
+  }
+  5% {
+    transform: translate(160px, -11px);
+  }
+  10% {
+    transform: translate(160px, 95px);
+  }
+  15% {
+    transform: translate(70px, 147px);
+  }
+  20% {
+    transform: translate(68px, 250px);
+  }
+  25% {
+    transform: translate(160px, 305px);
+  }
+  30% {
+    transform: translate(160px, 406px);
+  }
+  35% {
+    transform: translate(68px, 456px);
+  }
+  40% {
+    transform: translate(-22px, 406px);
+  }
+  45% {
+    transform: translate(-22px, 305px);
+  }
+  50% {
+    transform: translate(68px, 250px);
+  }
+  55% {
+    transform: translate(160px, 305px);
+  }
+  60% {
+    transform: translate(250px, 250px);
+  }
+  65% {
+    transform: translate(250px, 147px);
+  }
+  70% {
+    transform: translate(160px, 95px);
+  }
+  75% {
+    transform: translate(70px, 147px);
+  }
+  80% {
+    transform: translate(-22px, 95px);
+  }
+  85% {
+    transform: translate(-22px, -11px);
+  }
+  90% {
+    transform: translate(68px, -61px);
+  }
+  100% {
+    transform: translate(68px, -61px);
+  }
+}
+
 .index-about {
   background: -252px -18px no-repeat;
   position: relative;
@@ -42,6 +105,28 @@
     text-align: center;
     position: relative;
     z-index: 1;
+    // &::before,
+    &::after {
+      content: '';
+      width: 18px;
+      height: 18px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: url('../img/ball.webp') center/contain no-repeat;
+      z-index: 1;
+      transform: translate(68px, -61px);
+      animation-duration: 15s;
+      animation-timing-function: ease;
+      animation-delay: 2s;
+      animation-iteration-count: infinite;
+    }
+    // &::before {
+      // animation-name: animLeftBall;
+    // }
+    &::after {
+      animation-name: indexPropertiesBallAnim;
+    }
   }
 
   &__property {
