--- a/src/sections/research-and-development-properties/research-and-development-properties.1280.scss
+++ b/src/sections/research-and-development-properties/research-and-development-properties.1280.scss
@@ -30,12 +30,21 @@
 
   &__items-prev,
   &__items-next {
-    width: 36px;
-    height: 15px;
+    // width: 36px;
+    // height: 15px;
+    width: 66px;
+    height: 66px;
     display: flex;
     position: absolute;
-    bottom: 350px;
+    // bottom: 350px;
+    bottom: 310px;
     z-index: 1;
+    border: 1px solid transparent;
+    border-radius: 50%;
+    transition: border-color .5s;
+    &:hover {
+      border-color: $white;
+    }
 
     &::before {
       content: '';
@@ -45,7 +54,7 @@
       top: 50%;
       right: 0;
       border: 1px solid $white;
-      transform: translateY(-50%) rotate(45deg);
+      transform: translate(-150%, -50%) rotate(45deg);
       border-bottom: none;
       border-left: none;
       pointer-events: none;
@@ -57,7 +66,7 @@
       position: absolute;
       top: 50%;
       right: 0;
-      transform: translateY(-50%);
+      transform: translate(-40%, -50%);
       background-color: $white;
       pointer-events: none;
     }
@@ -84,6 +93,9 @@
         // max-width: none;
         width: 488px;
         height: 409px;
+        &::after {
+          opacity: 0;
+        }
       }
       .rd-properties__item-title {
         font-size: 22px;
@@ -101,6 +113,20 @@
     width: 183px;
     height: 155px;
     transition: width .5s, height .5s;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(42, 45, 46, 0.6);
+      transition: opacity .5s;
+      pointer-events: none;
+      opacity: 1;
+    }
   }
 
   &__item-img {
