--- a/src/scss/style-index.1024.scss
+++ b/src/scss/style-index.1024.scss
@@ -9,4 +9,6 @@
 @import '../sections/index-text-link/index-text-link.1024';
 @import '../sections/index-faq/index-faq.1024';
 @import '../sections/index-contacts/index-contacts.1024';
+@import '../sections/thanks-popup/thanks-popup.1024';
+@import '../sections/error-popup/error-popup.1024';
 @import '../sections/footer/footer.1024';
