--- a/src/scss/style-index.576.scss
+++ b/src/scss/style-index.576.scss
@@ -9,4 +9,6 @@
 @import '../sections/index-text-link/index-text-link.576';
 @import '../sections/index-faq/index-faq.576';
 @import '../sections/index-contacts/index-contacts.576';
+@import '../sections/thanks-popup/thanks-popup.576';
+@import '../sections/error-popup/error-popup.576';
 @import '../sections/footer/footer.576';
