--- a/src/scss/style-index.scss
+++ b/src/scss/style-index.scss
@@ -9,4 +9,6 @@
 @import '../sections/index-text-link/index-text-link';
 @import '../sections/index-faq/index-faq';
 @import '../sections/index-contacts/index-contacts';
+@import '../sections/thanks-popup/thanks-popup';
+@import '../sections/error-popup/error-popup';
 @import '../sections/footer/footer';
