--- a/src/scss/style/popups/popups.1280.scss
+++ b/src/scss/style/popups/popups.1280.scss
@@ -2,3 +2,12 @@
 @import '../../assets/colors';
 @import '../../assets/mixins';
 @import '../../assets/variables';
+
+.popup {
+  &__title {
+    font-size: 48px;
+  }
+  &__descr {
+    max-width: 350px;
+  }
+}
