--- a/src/sections/index-contacts/index-contacts.scss
+++ b/src/sections/index-contacts/index-contacts.scss
@@ -119,11 +119,11 @@
   }
 
   &__link {
-    width: 30px;
-    height: 30px;
-    &:nth-last-child(n+2) {
-      margin: 0 10px 0 0;
-    }
+    // width: 30px;
+    // height: 30px;
+    // &:nth-last-child(n+2) {
+    //   margin: 0 10px 0 0;
+    // }
   }
 
   &__links-title {
