--- a/src/sections/mobile-menu/mobile-menu.scss
+++ b/src/sections/mobile-menu/mobile-menu.scss
@@ -80,12 +80,12 @@
   }
 
   &__link {
-    width: 30px;
-    height: 30px;
-    background: center / contain no-repeat;
-    &:nth-last-child(n+2) {
-      margin: 0 10px 0 0;
-    }
+    // width: 30px;
+    // height: 30px;
+    // background: center / contain no-repeat;
+    // &:nth-last-child(n+2) {
+    //   margin: 0 10px 0 0;
+    // }
   }
 
 }
