--- a/src/scss/style-index.1280.scss
+++ b/src/scss/style-index.1280.scss
@@ -9,4 +9,6 @@
 @import '../sections/index-text-link/index-text-link.1280';
 @import '../sections/index-faq/index-faq.1280';
 @import '../sections/index-contacts/index-contacts.1280';
+@import '../sections/thanks-popup/thanks-popup.1280';
+@import '../sections/error-popup/error-popup.1280';
 @import '../sections/footer/footer.1280';
