--- a/src/scss/style-index.768.scss
+++ b/src/scss/style-index.768.scss
@@ -9,4 +9,6 @@
 @import '../sections/index-text-link/index-text-link.768';
 @import '../sections/index-faq/index-faq.768';
 @import '../sections/index-contacts/index-contacts.768';
+@import '../sections/thanks-popup/thanks-popup.768';
+@import '../sections/error-popup/error-popup.768';
 @import '../sections/footer/footer.768';
