--- a/src/scss/style/interface/interface.1280.scss
+++ b/src/scss/style/interface/interface.1280.scss
@@ -26,3 +26,18 @@ body {
 
   &-descr {}
 }
+
+
+
+.telegram,
+.twitter,
+.reddit,
+.youtube,
+.facebook,
+.tiktok {
+  width: 40px;
+  height: 40px;
+  &:nth-last-child(n+2) {
+    margin: 0 20px 0 0;
+  }
+}
