--- a/src/scss/style/popups/popups.scss
+++ b/src/scss/style/popups/popups.scss
@@ -2,6 +2,7 @@
 @import '../../assets/colors';
 @import '../../assets/mixins';
 @import '../../assets/variables';
+
 .popup {
   display: flex;
   align-items: flex-start;
@@ -12,7 +13,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: #000;
+  background: transparentize($black, 0.5);
   opacity: 0;
   visibility: hidden;
   transition: opacity .5s, visibility .5s;
@@ -26,9 +27,17 @@
 
   &__cnt {
     // Popup inside
-    background-color: #fff;
-    color: #000;
+    padding: 50px 0 70px;
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    background-color: $grey2;
+    color: $white;
     position: relative;
+    text-align: center;
+    border-radius: 5px;
   }
 
   // START close btn
@@ -93,7 +102,24 @@
   // END close btn (svg)
   // END close btn
 
-  &__title {}
+  &__status-icon {
+    margin: 0 0 30px;
+    width: 72px;
+    height: 72px;
+    object-fit: contain;
+  }
 
-  &__descr {}
+  &__title {
+    margin: 0 0 15px;
+    font: bold 28px/1.3 $mainFont;
+  }
+
+  &__descr {
+    max-width: 205px;
+  }
+
+  &__btn {
+    margin: 35px 0 0;
+    padding: 17px 35px;
+  }
 }
