--- a/src/sections/footer/footer.1280.scss
+++ b/src/sections/footer/footer.1280.scss
@@ -10,11 +10,11 @@
   }
 
   &__link {
-    width: 40px;
-    height: 40px;
-    &:nth-last-child(n+2) {
-      margin: 0 20px 0 0;
-    }
+    // width: 40px;
+    // height: 40px;
+    // &:nth-last-child(n+2) {
+    //   margin: 0 20px 0 0;
+    // }
   }
 
   &__copy {
