--- a/src/sections/footer/footer.scss
+++ b/src/sections/footer/footer.scss
@@ -15,12 +15,12 @@
   }
 
   &__link {
-    flex-shrink: 0;
-    width: 30px;
-    height: 30px;
-    &:nth-last-child(n+2) {
-      margin: 0 10px 0 0;
-    }
+    // flex-shrink: 0;
+    // width: 30px;
+    // height: 30px;
+    // &:nth-last-child(n+2) {
+    //   margin: 0 10px 0 0;
+    // }
   }
 
   &__copy {
