--- a/src/sections/index-about/index-about.1280.scss
+++ b/src/sections/index-about/index-about.1280.scss
@@ -2,14 +2,14 @@
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
 
-$animationPercentStep: 100 / 18;
+// $animationPercentStep: 100 / 18;
 
 @keyframes indexPropertiesBallAnim {
   0% {
-    transform: translate(151px, 135px);
+    transform: translate(150px, 135px);
   }
   5.55% {
-    transform: translate(151px, -25px);
+    transform: translate(150px, -25px);
   }
   11.1% {
     transform: translate(290px, -102px);
@@ -60,7 +60,7 @@ $animationPercentStep: 100 / 18;
     transform: translate(290px, 214px);
   }
   100% {
-    transform: translate(151px, 135px);
+    transform: translate(150px, 135px);
   }
 }
 
@@ -80,7 +80,11 @@ $animationPercentStep: 100 / 18;
     margin: 150px 0 258px;
     flex-flow: row;
     &::after {
-      transform: translate(151px, 135px);
+      display: none;
+      animation: none;
+      transform: translate(150px, 135px);
+      width: 27px;
+      height: 27px;
     }
   }
 
@@ -93,16 +97,16 @@ $animationPercentStep: 100 / 18;
     }
     
     &:first-child {
-      margin: 0 0 0 187px;
+      margin: 20px 0 0 187px;
       @media (hover) {
-        margin: 0 0 0 180px;
+        // margin: 20px 0 0 180px;
       }
     }
     &:nth-child(2) {
-      margin: 12px 0 0 55px;
+      margin: 20px 0 0 55px;
     }
     &:last-child {
-      margin: 0 0 0 55px;
+      margin: 20px 0 0 55px;
     }
 
     &-title {
