--- a/src/sections/index-about/index-about.scss
+++ b/src/sections/index-about/index-about.scss
@@ -4,70 +4,75 @@
 
 @keyframes indexPropertiesBallAnim {
   0% {
-    transform: translate(68px, -61px);
+    transform: translate(68.5px, -57px);
   }
   5% {
-    transform: translate(160px, -11px);
+    transform: translate(160px, -7px);
   }
   10% {
-    transform: translate(160px, 95px);
+    transform: translate(160px, 101px);
   }
   15% {
-    transform: translate(70px, 147px);
+    transform: translate(68.5px, 150px);
   }
   20% {
-    transform: translate(68px, 250px);
+    transform: translate(68.5px, 259px);
   }
   25% {
-    transform: translate(160px, 305px);
+    transform: translate(160px, 309px);
   }
   30% {
-    transform: translate(160px, 406px);
+    transform: translate(160px, 414px);
   }
   35% {
-    transform: translate(68px, 456px);
+    transform: translate(68.5px, 467px);
   }
   40% {
-    transform: translate(-22px, 406px);
+    transform: translate(-23px, 415px);
   }
   45% {
-    transform: translate(-22px, 305px);
+    transform: translate(-23px, 310px);
   }
   50% {
-    transform: translate(68px, 250px);
+    transform: translate(68.5px, 259px);
   }
   55% {
-    transform: translate(160px, 305px);
+    transform: translate(160px, 309px);
   }
   60% {
-    transform: translate(250px, 250px);
+    transform: translate(252px, 257px);
   }
   65% {
-    transform: translate(250px, 147px);
+    transform: translate(252px, 150px);
   }
   70% {
-    transform: translate(160px, 95px);
+    transform: translate(160px, 101px);
   }
   75% {
-    transform: translate(70px, 147px);
+    transform: translate(68.5px, 150px);
   }
   80% {
-    transform: translate(-22px, 95px);
+    transform: translate(-23px, 101px);
   }
   85% {
-    transform: translate(-22px, -11px);
+    transform: translate(-23px, -8px);
   }
   90% {
-    transform: translate(68px, -61px);
+    transform: translate(68.5px, -57px);
   }
   100% {
-    transform: translate(68px, -61px);
+    transform: translate(68.5px, -57px);
   }
 }
 
 .index-about {
-  background: -252px -18px no-repeat;
+  padding-bottom: 125px;
+  // background: -252px -18px no-repeat;
+  background: responsive('320->575', '-252->-81') -18px no-repeat;
   position: relative;
+  +.sect {
+    padding-top: 0;
+  }
   &.lazyloaded,
   &:not(.lazy) {
     background-image: url('../img/honeycomb-bg-mobile.svg'); 
@@ -98,7 +103,8 @@
   }
 
   &__properties {
-    margin: 80px 0 0 20px;
+    margin: 85px 0 0 responsive('320->575', '20->192');
+    // margin: 85px 0 0 20px;
     display: flex;
     flex-flow: column;
     align-items: flex-start;
@@ -115,15 +121,11 @@
       left: 0;
       background: url('../img/ball.webp') center/contain no-repeat;
       z-index: 1;
-      transform: translate(68px, -61px);
-      animation-duration: 15s;
-      animation-timing-function: ease;
-      animation-delay: 2s;
+      transform: translate(69px,-57px);
+      animation-duration: 25s;
+      animation-timing-function: linear;
       animation-iteration-count: infinite;
     }
-    // &::before {
-      // animation-name: animLeftBall;
-    // }
     &::after {
       animation-name: indexPropertiesBallAnim;
     }
@@ -145,30 +147,30 @@
     }
 
     &:first-child {
-      &.lazyloaded,
-      &:not(.lazy) {
-        &::before {
-          background-image: url('../img/hexagon-bg-1.svg');	
-        }
-      }
+      // &.lazyloaded,
+      // &:not(.lazy) {
+      //   &::before {
+      //     background-image: url('../img/hexagon-bg-1.svg');	
+      //   }
+      // }
     }
     &:nth-child(2) {
-      margin: 55px 0 0 91px;
-      &.lazyloaded,
-      &:not(.lazy) {
-        &::before {
-          background-image: url('../img/hexagon-bg-2.svg');	
-        }
-      }
+      margin: 60px 0 0 91px;
+      // &.lazyloaded,
+      // &:not(.lazy) {
+      //   &::before {
+      //     background-image: url('../img/hexagon-bg-2.svg');	
+      //   }
+      // }
     }
     &:last-child {
       margin: 45px 0 0;
-      &.lazyloaded,
-      &:not(.lazy) {
-        &::before {
-          background-image: url('../img/hexagon-bg-3.svg');	
-        }
-      }
+      // &.lazyloaded,
+      // &:not(.lazy) {
+      //   &::before {
+      //     background-image: url('../img/hexagon-bg-3.svg');	
+      //   }
+      // }
     }
 
     &-title {
