--- a/src/sections/index-contacts/index-contacts.1280.scss
+++ b/src/sections/index-contacts/index-contacts.1280.scss
@@ -6,6 +6,26 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    right: calc(50% - 1000px);
+    bottom: -150px;
+    width: 1280px;
+    height: 1280px;
+    background: bottom 150px right -400px/contain no-repeat;
+    transform: rotate(90deg);
+    z-index: -1;
+  }
+
+  &.lazyloaded,
+  &:not(.lazy) {
+    &::before {
+      background-image: url('../img/index-perspective-img.svg');
+    }
+  }
 
   &__top-text {
   }
@@ -99,11 +119,11 @@
   }
 
   &__link {
-    width: 40px;
-    height: 40px;
-    &:nth-last-child(n+2) {
-      margin: 0 20px 0 0;
-    }
+    // width: 40px;
+    // height: 40px;
+    // &:nth-last-child(n+2) {
+    //   margin: 0 20px 0 0;
+    // }
   }
 
   &__links-title {
