--- a/src/sections/research-and-development-descr/research-and-development-descr.scss
+++ b/src/sections/research-and-development-descr/research-and-development-descr.scss
@@ -3,12 +3,21 @@
 @import '../../scss/assets/variables';
 
 .rd-descr {
-
+  background: left bottom / contain no-repeat;
+  &.lazyloaded,
+  &:not(.lazy) {
+    background-image: url('../img/rd-descr-section-bg-mobile.svg');
+  }
   &__title {
     margin: 0 0 20px;
   }
 
   &__text {
+  }
+
+  &__pic {
+    margin: 100px -20px 0 20px;
+    display: block;
   }
 }
 .container {
