--- a/src/sections/thanks-popup/thanks-popup.576.scss
+++ b/src/sections/thanks-popup/thanks-popup.576.scss
@@ -1,3 +1,25 @@
 @import '../../scss/assets/colors';
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
+
+
+.thanks-popup {
+
+  &__cnt {
+  }
+
+  &__close {
+  }
+
+  &__status-icon {
+  }
+
+  &__title {
+  }
+
+  &__descr {
+  }
+
+  &__btn {
+  }
+}
