--- a/src/sections/tokenomics-token-distribution-model/tokenomics-token-distribution-model.scss
+++ b/src/sections/tokenomics-token-distribution-model/tokenomics-token-distribution-model.scss
@@ -34,7 +34,12 @@
   }
 
   &__chart-tooltip {
-    padding: 35px 25px;
+    width: 140px;
+    height: 140px;
+    
+    // padding: 35px 25px;
+    // padding: 25px;
+    // aspect-ratio: 1;
     z-index: 1;
     margin: auto;
     grid-row: 1;
