--- a/src/scss/style/interface/interface.1280.scss
+++ b/src/scss/style/interface/interface.1280.scss
@@ -27,7 +27,20 @@ body {
   &-descr {}
 }
 
+.hero-404 {
 
+  &__img {
+  }
+
+  &__title {
+  }
+
+  &__descr {
+  }
+
+  &__btn {
+  }
+}
 
 .telegram,
 .twitter,
