--- a/src/scss/style/interface/interface.768.scss
+++ b/src/scss/style/interface/interface.768.scss
@@ -2,3 +2,18 @@
 @import '../../assets/colors';
 @import '../../assets/mixins';
 @import '../../assets/variables';
+
+.hero-404 {
+
+  &__img {
+  }
+
+  &__title {
+  }
+
+  &__descr {
+  }
+
+  &__btn {
+  }
+}
