--- a/src/sections/header/header.scss
+++ b/src/sections/header/header.scss
@@ -8,6 +8,23 @@
   display: flex;
   align-items: center;
   background: $black;
+  &.fixed {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    animation: translateToBottom 1s;
+    .hdr__logo {
+      display: none;
+    }
+    .hdr__burger {
+      margin: 0 0 0 auto;
+    }
+  }
+
   &__logo {
     margin: 0 auto 0 0;
   }
@@ -31,5 +48,25 @@
 
   &__nav {
     display: none;
+  }
+}
+
+.hdr__nav-li,
+.menu__nav-li {
+  &.current {
+    >.nav-link {
+      position: relative;
+      &::after {
+        content: '';
+        position: absolute;
+        bottom: -3px;
+        left: 0;
+        width: 100%;
+        height: 3px;
+        border-radius: 5px;
+        background: linear-gradient(266.84deg, #12C2E9 -5.92%, #C471ED 55.67%, #F64F59 106.52%);
+        pointer-events: none;
+      }
+    }
   }
 }
