--- a/src/sections/index-about/index-about.1280.scss
+++ b/src/sections/index-about/index-about.1280.scss
@@ -6,66 +6,69 @@
 
 @keyframes indexPropertiesBallAnim {
   0% {
-    transform: translate(150px, 135px);
+    transform: translate(147px, 158px);
   }
   5.55% {
-    transform: translate(150px, -25px);
+    transform: translate(147px, -5px);
   }
   11.1% {
-    transform: translate(290px, -102px);
+    transform: translate(286px, -84px);
   }
   16.65% {
-    transform: translate(430px, -25px);
+    transform: translate(427px, -5px);
   }
   22.2% {
-    transform: translate(430px, 137px);
+    transform: translate(427px, 158px);
   }
   27.75% {
-    transform: translate(570px, 214px);
+    transform: translate(567px, 234px);
   }
   33.3% {
-    transform: translate(710px, 137px);
+    transform: translate(708px, 158px);
   }
   38.5% {
-    transform: translate(710px, -25px);
+    transform: translate(708px, -5px);
   }
   44.4% {
-    transform: translate(850px, -102px);
+    transform: translate(848px, -84px);
   }
   49.95% {
-    transform: translate(989px, -25px);
+    transform: translate(988px, -5px);
   }
   55.5% {
-    transform: translate(989px, 137px);
+    transform: translate(988px, 158px);
   }
   61.05% {
-    transform: translate(850px, 214px);
+    transform: translate(848px, 234px);
   }
   66.6% {
-    transform: translate(710px, 137px);
+    transform: translate(708px, 158px);
   }
   72.15% {
-    transform: translate(710px, -25px);
+    transform: translate(708px, -5px);
   }
   77.7% {
-    transform: translate(570px, -102px);
+    transform: translate(567px, -84px);
   }
   83.25% {
-    transform: translate(430px, -25px);
+    transform: translate(427px, -5px);
   }
   88.8% {
-    transform: translate(430px, 137px);
+    transform: translate(427px, 158px);
   }
   94.35% {
-    transform: translate(290px, 214px);
+    transform: translate(286px, 234px);
   }
   100% {
-    transform: translate(150px, 135px);
+    transform: translate(147px, 158px);
   }
 }
 
 .index-about {
   background-position: center;
+  @media (hover) {
+    // background-position: calc(50% + 7px) center;
+  }
   &.lazyloaded,
   &:not(.lazy) {
     background-image: url('../img/honeycomb-bg-desktop.svg');
@@ -80,9 +83,9 @@
     margin: 150px 0 258px;
     flex-flow: row;
     &::after {
-      display: none;
-      animation: none;
-      transform: translate(150px, 135px);
+      // display: none;
+      // animation: none;
+      transform: translate(147px, 158px);
       width: 27px;
       height: 27px;
     }
