--- a/src/sections/index-faq/index-faq.1280.scss
+++ b/src/sections/index-faq/index-faq.1280.scss
@@ -37,7 +37,8 @@
   }
 
   &__item-question {
-    padding: 40px 40px 40px 0;
+    // padding: 40px 40px 40px 0;
+    padding: 40px 0 40px 0;
     font-size: 22px;
   }
 
