--- a/src/sections/index-faq/index-faq.scss
+++ b/src/sections/index-faq/index-faq.scss
@@ -57,7 +57,8 @@
   &__item-question {
     display: flex;
     align-items: flex-start;
-    padding: 25px 30px 25px 0;
+    // padding: 25px 30px 25px 0;
+    padding: 25px 0 25px 0;
     font: bold 16px/1.5 $mainFont;
     text-transform: uppercase;
     cursor: pointer;
