--- a/src/sections/index-perspective/index-perspective.1280.scss
+++ b/src/sections/index-perspective/index-perspective.1280.scss
@@ -2,6 +2,30 @@
 @import '../../scss/assets/mixins';
 @import '../../scss/assets/variables';
 
+@keyframes swayingLeft {
+  0% {
+    transform: translate(0, 50%);
+  }
+  50% {
+    transform: translate(-5px, 35%);
+  }
+  100% {
+    transform: translate(0, 50%);
+  }
+}
+
+@keyframes swayingRight {
+  0% {
+    transform: translate(0, 50%);
+  }
+  50% {
+    transform: translate(5px, 35%);
+  }
+  100% {
+    transform: translate(0, 50%);
+  }
+}
+
 .index-perspective {
 
   &__top-text {}
@@ -15,6 +39,54 @@
   &__item {
     margin: 120px 0 0;
     align-items: center;
+    &:first-child {
+      .index-perspective__item-pic {
+        position: relative;
+        &::after {
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 80px;
+          width: 65px;
+          height: 65px;
+          background: center / contain no-repeat;
+          transform: translate(0, 50%);
+          animation: swayingLeft 4s .5s infinite ease-in-out;
+          transform-origin: 50% 100% 0;
+        }
+        &.lazyloaded,
+        &:not(.lazy) {
+          &::after {
+            background-image: url('../img/ball.webp');
+          }
+        }
+      }
+    }
+
+    &:nth-child(2) {
+      .index-perspective__item-pic {
+        position: relative;
+        &::before {
+          content: '';
+          position: absolute;
+          top: -150px;
+          left: 50%;
+          width: 45px;
+          height: 45px;
+          background: center / contain no-repeat;
+          transform: translate(0, 50%);
+          animation: swayingRight 4s 2.5s infinite ease-in-out;
+          transform-origin: 50% 100% 0;
+        }
+        &.lazyloaded,
+        &:not(.lazy) {
+          &::before {
+            background-image: url('../img/ball.webp');
+          }
+        }
+      }
+    }
+
     &-pic {
       flex-shrink: 0;
       width: 590px;
@@ -49,6 +121,7 @@
     }
     &.even {
       flex-flow: row-reverse;
+
       .index-perspective__item-pic {
         margin: 0 0 0 125px;
       }
