--- a/src/scss/style/forms/forms.1280.scss
+++ b/src/scss/style/forms/forms.1280.scss
@@ -11,12 +11,12 @@
     height: 35px;
   }
   &__textarea {
-    height: 50px;
-    resize: none;
+    // height: 50px;
+    // resize: none;
   }
 }
 
 .check {
   max-width: 260px;
   font-size: 14px;
-}
+} 
