--- a/src/scss/assets/grid.scss
+++ b/src/scss/assets/grid.scss
@@ -4,24 +4,24 @@
 
 @media (min-width:575.98px) {
   .container {
-    padding: 0 calc(50vw - 268px);
+    padding: 0 calc(50% - 268px);
   }
 }
 
 @media (min-width:767.98px) {
   .container {
-    padding: 0 calc(50vw - 360px);
+    padding: 0 calc(50% - 360px);
   }
 }
 
 @media (min-width:1023.98px) {
   .container {
-    padding: 0 calc(50vw - 480px);
+    padding: 0 calc(50% - 480px);
   }
 }
 
 @media (min-width:1279.98px) {
   .container {
-    padding: 0 calc(50vw - 580px);
+    padding: 0 calc(50% - 580px);
   }
 }
