--- a/src/sections/index-contacts/index-contacts.1280.scss
+++ b/src/sections/index-contacts/index-contacts.1280.scss
@@ -9,15 +9,17 @@
   position: relative;
 
   &::before {
-    content: '';
+    content: "";
     position: absolute;
-    right: calc(50% - 1000px);
+    // right: calc(50% - 1000px);
+    right: -350px;
     bottom: -150px;
     width: 1280px;
     height: 1280px;
     background: bottom 150px right -400px/contain no-repeat;
     transform: rotate(90deg);
-    z-index: -1;
+    pointer-events: none;
+    z-index: -1
   }
 
   &.lazyloaded,
