index hero video

--- a/src/sections/header/header.scss
+++ b/src/sections/header/header.scss
@@ -7,7 +7,13 @@
   // padding-bottom: 18px;
   display: flex;
   align-items: center;
-  background: $black;
+  // background: $black;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  
   &.fixed {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -17,6 +23,7 @@
     width: 100%;
     z-index: 1;
     animation: translateToBottom 1s;
+    background: $black;
     .hdr__logo-img {
       height: 30px;
       // display: none;
