--- a/src/sections/index-hero/index-hero.scss
+++ b/src/sections/index-hero/index-hero.scss
@@ -3,14 +3,45 @@
 @import '../../scss/assets/variables';
 
 .index-hero {
-  padding-bottom: 40px;
-  &__pic {
-    margin: auto;
-    width: 82%;
-    display: block;
+  // padding-bottom: 40px;
+  position:relative;
+  height: 100vh;
+  // height: calc(100vh - 65px);
+  display: flex;
+  text-align: center;
+
+  &::before {
+    content: '';
+    position: absolute;
+    // top: -65px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0,0,0,.75)
+  }
+
+  // &__pic {
+    // margin: auto;
+    // width: 82%;
+    // display: block;
+  // }
+
+  &__video {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    // top: -65px;
+    left: 0;
+    object-fit: cover;
+    object-position: 60% 50%;
+    z-index: -1;
   }
 
   &__text {
+    margin: auto;
+    position: relative;
   }
 
   &__top-text {
@@ -24,12 +55,15 @@
   }
 
   &__descr {
+    margin: 0 auto;
+    max-width: 395px;
   }
 
   &__links {
-    margin: 35px 0 0;
+    margin: 35px auto 0;
     display: flex;
     align-items: center;
+    justify-content: center;
   }
 
   &__link {
